k8s-kustomize/overlays/stg/backend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

# 기본 설정
metadata:
  name: backend

# 스펙
spec:
  parentRefs:
    - name: devths-gateway
      namespace: nginx-gateway

  # 도메인 명
  hostnames:
    - "stg.api.devths.com"

  # 참조 규칙
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backend-service-stg
          port: 80
